2008-12-18 Richard Dale <richard.j.dale@gmail.com>
* Added Ruby 1.9 compatible RSTRING handling
* Update the wt_header_list with the Wt 2.2.2 headers and tweak the smoke lib
code generation for the smoke lib to work
* However, the Wt::WPopupMenu header is missing a Wt/WApplication include

2008-12-14 Richard Dale <richard.j.dale@gmail.com>
* Added Wt::WModelIndex.internalPointer() and 
Wt::WAbstractItemModel.createIndex() methods

2008-12-12 Richard Dale <richard.j.dale@gmail.com>
* Updated the smoke.h header with improved binary chop code